<resources>
    <string name="app_name">Maharlika App</string>
    <string name="maharlika">Maharlika</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign-up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="agree_terms_and_conditions">Agree Terms and Conditions</string>
    <string name="loading">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="already_registered">Already Registered?</string>
    <string name="add_events">Add Events</string>
    <string name="add_news">Add News</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="add_new_event">Add New Event</string>
    <string name="submit">Submit</string>
    <string name="go_to_events">Go to Events</string>
    <string name="events">Events</string>
    <string name="edit_events">Edit Events</string>
    <string name="update">Update</string>
    <string name="news">News</string>
    <string name="accounts">Accounts</string>
    <string name="logout">Logout</string>
    <string name="read_more">Read More..</string>
    <string name="pick_image">Pick Image</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="_20_20_20">20/20/20</string>
    <string name="edit_news">Edit News</string>
    <string name="fullname">Fullname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_event_title">Sample Event Title</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_account">Edit Account</string>
    <string name="forgot_password1">Forgot Password</string>

</resources>