<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.manageAcc.EditAccountsActivity">


    <ImageButton
        android:id="@+id/imgBtnBack"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_margin="10dp"
        android:background="@color/fulltrans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDesciptionEventsEdit" />

    <TextView
        android:id="@+id/tvEditEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_events"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitleEventsEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etDesciptionEventsEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/event_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitleEventsEdit"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="317dp"
        android:layout_height="219dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditEvents"
        app:srcCompat="@drawable/read" />

</androidx.constraintlayout.widget.ConstraintLayout>